--- a/social_login_node/package.json
+++ b/social_login_node/package.json
@@ -14,6 +14,7 @@
     "connect-flash": "0.1.1",
     "connect-redis": "^1.5.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "csrf": "^3.1.0",
     "ejs": "0.8.5",
     "express": "4.6.1",
